updated requirements for password hasing

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,7 @@ python-dotenv==1.0.1
 # Pydantic (comes with FastAPI, but pinning version for clarity)
 pydantic==2.10.3
 pydantic-settings==2.6.1
+
+# Password hashing
+passlib[bcrypt]==1.7.4
+python-jose[cryptography]==3.3.0
