All security improvements are in place. The application now has proper database migration support, restricted CORS, and rate limiting on authentication endpoints

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,3 +15,10 @@ DATABASE_URL=sqlite:///./stock-tracker.db
 
 # For MySQL (example):
 # DATABASE_URL=mysql+pymysql://user:password@localhost:3306/stocktracker
+
+# Frontend URL (for CORS)
+# Development default (Vite dev server)
+FRONTEND_URL=http://localhost:5173
+
+# For production, set to your actual frontend URL:
+# FRONTEND_URL=https://your-domain.com
