--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,9 @@ uvicorn[standard]==0.32.1
 # Database ORM
 sqlalchemy>=2.0.44
 
+# Database migrations
+alembic==1.12.1
+
 # HTTP requests (you're already using this in api_client.py)
 requests==2.32.3
 
@@ -20,3 +23,6 @@ pydantic-settings==2.6.1
 # Password hashing
 passlib[bcrypt]==1.7.4
 python-jose[cryptography]==3.3.0
+
+# Rate limiting
+slowapi==0.1.9
