--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,9 @@ fastapi==0.115.5
 # ASGI server for running FastAPI
 uvicorn[standard]==0.32.1
 
+# Form data handling (required for OAuth2PasswordRequestForm)
+python-multipart==0.0.20
+
 # Database ORM
 sqlalchemy>=2.0.44
 
