--- a/backend/pyrightconfig.json
+++ b/backend/pyrightconfig.json
@@ -10,6 +10,9 @@
             "pythonVersion": "3.12",
             "pythonPlatform": "Darwin"
         }
-    ]
+    ],
+    "reportMissingImports": true,
+    "reportMissingTypeStubs": false,
+    "typeCheckingMode": "basic"
 }
 
