--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -29,3 +29,9 @@ python-jose[cryptography]==3.3.0
 
 # Rate limiting
 slowapi==0.1.9
+
+# Testing dependencies
+pytest==8.3.4
+pytest-asyncio==0.24.0
+pytest-cov==6.0.0
+httpx==0.27.2
