--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -25,6 +25,7 @@ pydantic-settings==2.6.1
 
 # Password hashing
 passlib[bcrypt]==1.7.4
+bcrypt==4.0.1  # Pin to 4.0.1 for compatibility with passlib 1.7.4
 python-jose[cryptography]==3.3.0
 
 # Rate limiting
